# model-training

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  REAME.md  b1_Sentiment_Analysis_Model.ipynb  dvc.yaml  dvc.yml  model_training.py  params.yaml  prepare_for_model_service.py  py_ml_smells.py  pyproject.toml  requirements.txt  test_fresh.py  update_badges.py
.dvc/: config
.github/workflows/: docker-build.yml  test.yml  train.yml
docs/: mkdocs.yml
docs/docs/: index.md
model_service_artifacts/: c1_BoW_v1.pkl
model_training/: __init__.py  config.py  data_pipeline.py  dataset.py  features.py  plots.py
model_training/data/: download_dataset.py
model_training/modeling/: evaluate_model.py  predict.py  reference_model_train.py  train.py
models/: bow_vectorizer.pkl
reports/: evaluation.json  metrics.json
tests/: conftest.py  test_feat_data.py  test_metamorphic.py  test_ml_infra.py  test_model_dev.py  test_monitoring.py  test_mutamorphic.py
