[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model_training_2"
version = "0.1.0"
description = "Sentiment analysis model training for restaurant reviews"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Team 14", email = "team14@example.com" }
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "nltk>=3.6.0",
    "joblib>=1.1.0",
    "tqdm>=4.62.0",
    "typer>=0.4.0",
    "loguru>=0.6.0",
    "libml @ file:///Users/ilmajaganjac/Documents/uni/remla25-team14/lib-ml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

